--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ button {
 }
 
 main > section {
-  padding: 2.5em 2.5em;
+  padding: 2.5em 0.8;
   scroll-margin-top: 5em;
 }
 
@@ -121,7 +121,7 @@ main > section {
 
 .container {
   overflow: auto;
-  width: 78.125%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   padding-block: 2em;
@@ -274,6 +274,10 @@ footer {
 @media screen and (min-width: 600px) {
   main {
     text-align: left;
+  }
+
+  main > section {
+    padding: 2.5em;
   }
 
   section.dark {
