--- a/index.css
+++ b/index.css
@@ -143,7 +143,7 @@ picture.dev-jane > img {
 }
 
 .logo {
-  font-size: 3.5rem;
+  font-size: clamp(2rem, 2.3vw + 1.5rem, 3.5rem);
 }
 
 .hamburger {
